# fastapi-template-poetry

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
docker/: docker-compose-test-ci.yml  docker-compose.yml
fastapi_app/: __main__.py
fastapi_app/routers/: __init__.py
fastapi_app/routers/api/: __init__.py  hello_world.py
fastapi_app/services/logs/: __init__.py
fastapi_app/tools/logs/: __init__.py
src/: __main__.py  app.py
src/routers/: __init__.py
src/routers/api/: __init__.py  hello_world.py
src/services/logs/: __init__.py
tests/: test_app.py
