[tool.poetry]
name = "fastapi_app"
version = "0.0.1"
description = "A simple FastAPI app"
authors = ["sushka <barabum@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.11.0"}


[tool.poetry.scripts]
app = "fastapi_app.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
