[tool.poetry]
name = "fastapi_app"
version = "0.0.1"
description = "A simple FastAPI app"
authors = ["sushka <barabum@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
loguru = "^0.7.2"
pydantic = "^2.5.2"
black = {version = "^23.11.0", optional = true}


[tool.poetry.scripts]
app = "fastapi_app.__main__:main"


[tool.poetry.extras]
dev = ["black"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
