[tool.poetry]
name = "fastapi_app"
version = "0.0.1"
description = "A simple FastAPI app"
authors = ["sushka <barabum@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
loguru = "^0.7.2"
pydantic = "^2.5.2"
black = {version = "^23.11.0", optional = true}

[tool.poetry.scripts]
app = "fastapi_app.__main__:main"

[tool.poetry.group.dev.dependencies]
devtools = "^0.12.2"
black = "^23.12.0"
isort = "^5.13.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
mypy = "^1.8.0"

[tool.isort]
profile = "black"
src_paths = ["."]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = "attr-defined"
exclude = '^tests/'  # put --exclude="^tests/" as argument in PyCharm mypy plugin

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
